# handwriting_ocr

./: README.md  pyproject.toml
handwriting_ocr/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
